# drone

./: .gitignore  README.md  build-development.sh  build-release.sh  pyproject.toml
.github/workflows/: tests.yml
development/ontology/: index-en.html  ontology.jsonld  ontology.nt  ontology.rdf  ontology.ttl
development/ontology/provenance/: provenance-en.html  provenance-en.ttl
docs/: chawlk_to_ttl.sh  data-collection.drawio
docs/MODL/: MaterialTransformationPattern.ttl  agentrole.ttl  aggregation.ttl  event.ttl  explicittyping.ttl  identifier.ttl  name.ttl  participantrole.ttl  provenance.ttl  quantities.ttl  readme.md  reification.ttl  sequence.ttl  spatialextent.ttl  spatiotemporalextent.ttl  stub.ttl  temporalextent.ttl  trajectory.ttl  tree.ttl
docs/chowlk/: chowlk-drawio-library.xml  chowlk-library-complete.xml
docs/diagrams/: solid-mapping.drawio
docs/w3id/: Dockerfile  directions.md  docker-compose.yml  htaccess  paths_to_check.txt  readme.md  test-links-docker.sh
modules/activities/: data-collection.ttl  mission.ttl
modules/alignments/: provo-dcat.ttl  provo-geosparql.ttl  provo-sosa.ttl  provo-time.ttl
modules/core/: activity.ttl  identifier.ttl  mereology.ttl  metadata-shacl.ttl  metadata.ttl  route.ttl  type.ttl
modules/equipment/: drone-eqp.ttl  equipment.ttl  payload.ttl  vehicle.ttl
modules/imports/: SCHEMA_QUDT-v2.1.ttl  get_import_shapes.sh  get_imports.sh  profile.ttl  sio.ttl  sosa.ttl
tests/: 0-validate.t  modules.txt  runall.sh  shapes.txt  validate.sh  vehicle.t
tests/vehicle/: vehicle-invalid.ttl
(+48 files in other folders)
