[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Charles Vardeman", email = "cvardema@nd.edu"},
]
dependencies = [
    "pyshacl>=0.19.0",
    "rdfx @ git+https://github.com/charlesvardeman/rdfx.git",
    "pylode>=3.0.4",
]
requires-python = ">=3.9"
license = {text = "CC0-1.0"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
